--- a/power_iteration_and_visualization.ipynb
+++ b/power_iteration_and_visualization.ipynb
@@ -37,7 +37,7 @@
         "    eigenvalue: float – dominant eigenvalue estimation after `num_steps` steps\n",
         "    eigenvector: np.ndarray – corresponding eigenvector estimation\n",
         "    \"\"\"\n",
-        "    ### YOUR CODE HERE\n",
+        "    \n",
         "    A = data  # matrix A\n",
         "    b0 = np.ones(data.shape[0])\n",
         "    b0 = b0 / np.linalg.norm(b0)  # L2\n",
@@ -79,6 +79,33 @@
       ],
       "source": [
         "def get_dominant_eigens(matrix: np.ndarray, start_vector: np.ndarray, num_steps: int) -> dict[int, dict[str, np.ndarray or float]]:\n",
+        "    \"\"\"\n",
+        "    Calculate the dominant eigenvalue and corresponding eigenvector of a matrix using the power iteration method.\n",
+        "\n",
+        "    Parameters:\n",
+        "    - matrix (np.ndarray): A 2D square matrix for which the dominant eigenvalue and eigenvector are to be computed.\n",
+        "    - start_vector (np.ndarray): A 1D vector that serves as the initial guess for the eigenvector. It should have the same number of elements as the rows/columns of the matrix.\n",
+        "    - num_steps (int): The number of iterations to perform the power iteration method.\n",
+        "\n",
+        "    Returns:\n",
+        "    - dict[int, dict[str, np.ndarray or float]]: A dictionary with iteration numbers as keys. Each entry contains a sub-dictionary with:\n",
+        "        - 'vector': The approximated eigenvector at that iteration.\n",
+        "        - 'value': The approximated eigenvalue at that iteration.\n",
+        "\n",
+        "    Raises:\n",
+        "    - AssertionError: If the number of rows in the matrix does not match the length of the start vector.\n",
+        "\n",
+        "    Notes:\n",
+        "    - The function returns two dictionaries: the first for the eigenvectors and eigenvalues computed without normalization, and the second with normalization at each step.\n",
+        "    - The dominant eigenvalue corresponds to the largest magnitude eigenvalue of the matrix.\n",
+        "\n",
+        "    Example:\n",
+        "    --------\n",
+        "    A = np.array([[4, -2],\n",
+        "                  [1,  1]])\n",
+        "    eigens_by_steps, eigens_noemed_by_steps = get_dominant_eigens(A, start_vector=np.array([1, 1]), num_steps=20)\n",
+        "    print(\"Eigens:\", eigens_by_steps, eigens_noemed_by_steps)\n",
+        "    \"\"\"\n",
         "    A = matrix  # matrix A\n",
         "    b = start_vector.astype(float)\n",
         "    assert A.shape[0] == b.shape[0], \"the matrix.shape[0] & start_vector.shape[0] must be equal\"\n",
